--- a/angular/my-app/src/app/core/componet/navigation/navigation.component.html
+++ b/angular/my-app/src/app/core/componet/navigation/navigation.component.html
@@ -69,6 +69,18 @@
 
             </ul>
         </li>
+        <li>
+          <a href="#RxJSSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">RxJS</a>
+          <ul class="collapse list-unstyled" id="RxJSSubmenu">
+              <li>
+                <a routerLink="rxjs/observable">OBSERVABLE</a>
+              </li>
+              <li>
+                <a href="">SUBJECT</a>
+              </li>
+
+          </ul>
+      </li>
 
       </ul>
   </nav>
