--- a/angular/my-app/src/app/dynamicomponent/mobile/mobile.component.html
+++ b/angular/my-app/src/app/dynamicomponent/mobile/mobile.component.html
@@ -1,1 +1,29 @@
-<p>mobile works!</p>
+<header>
+  <!-- Navbar -->
+  <nav class=" p-2" style="height: 69px;">
+    <ul class=" nav d-flex  flex-nowrap">
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="home" ><h5>HOME</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="about" ><h5>ABOUT US</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active"  routerLink=""><h5>CONTACT US</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active"  routerLink="user"> <h5>USERS</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="customer"><h5>CUSTOMERS</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="employee"><h5>EMPLOYEE</h5></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="dynamicomponet"><h5>DYNAMIC</h5></a>
+      </li>
+    </ul>
+  </nav>
+  <!-- Navbar -->
+</header>
