--- a/angular/my-app/src/app/rxjs/observable/observable.component.html
+++ b/angular/my-app/src/app/rxjs/observable/observable.component.html
@@ -6,33 +6,31 @@
           <strong> example 01 (manual)</strong>
           <hr>
           <ul [ngClass]="status == 'completed' ? 'completed': status =='error'?'error':''" class="list" id="elcontainer">
-           
+
           </ul>
     </div>
     <div class="col-md-6">
         <strong> example 02 (custome interval Observable)</strong>
         <hr>
-        <ul class="list ">
-          <li>angular</li>
-          <li>typescript</li>
-          <li>java</li>
+        <ul class="list " id="elcontainer1">
+
         </ul>
   </div>
- 
+
 </div>
 <div class="row"></div>
 <div class="row">
-    <div class="col-md-12"> 
+    <div class="col-md-12">
         <strong> example 03 (Randome Name)</strong>
         <hr>
-        <p class="bg-light py-2 px-3 border rounded"> 
+        <p class="bg-light py-2 px-3 border rounded">
             <strong>Randome Name</strong> 'amresh','shakher','sharma','ramesh','mahesh','rahul'
         </p>
         <hr>
         <p>current name : <strong class="text-success"> amresh</strong></p>
         <span class="badge badge-success bg-success">Success</span>
-    
-         
+
+
     </div>
 </div>
 
