--- a/angular/angular assement-21.09.2022/angular-assessment/src/app/empoloyee/component/employee-form/employee-form.component.html
+++ b/angular/angular assement-21.09.2022/angular-assessment/src/app/empoloyee/component/employee-form/employee-form.component.html
@@ -44,7 +44,7 @@
     </div>
     <div *ngIf="employe['date'].invalid && (submitted|| employe['date'].touched || employe['date'].dirty)" class="danger">
       <div *ngIf="employe['date'].errors?.['required']">
-         Date is required.
+       DOB is required.
       </div>
   </div>
     <div class="form-group col-md-6">
