--- a/angular/my-app/src/app/core/componet/header/header.component.html
+++ b/angular/my-app/src/app/core/componet/header/header.component.html
@@ -23,6 +23,16 @@
       <li class="nav-item">
         <a class="nav-link active" routerLink="dynamicomponet"><h5>DYNAMIC</h5></a>
       </li>
+      <li><div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu bg-dark">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div></li>
     </ul>
   </nav>
   <!-- Navbar -->
