--- a/angular/my-app/src/app/core/componet/navigation/navigation.component.html
+++ b/angular/my-app/src/app/core/componet/navigation/navigation.component.html
@@ -76,10 +76,26 @@
                 <a routerLink="rxjs/observable">OBSERVABLE</a>
               </li>
               <li>
-                <a href="">SUBJECT</a>
+                <a href="#subjectSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Subject Type</a>
+                <ul class="collapse list-unstyled" id="subjectSubmenu">
+                    <li>
+                      <a routerLink="rxjs/subject">Subject</a>
+                    </li>
+                    <li>
+                      <a routerLink="rxjs/behavioural">BehaviouralSubject</a>
+                    </li>
+                    <li>
+                      <a routerLink="rxjs/async">AsyncSubject</a>
+                    </li>
+                    <li>
+                      <a routerLink="rxjs/reply">ReplaySubject</a>
+                    </li>
+
+                </ul>
               </li>
 
           </ul>
+
       </li>
 
       </ul>
