--- a/angular/my-app/src/app/rxjs/observable/observable.component.html
+++ b/angular/my-app/src/app/rxjs/observable/observable.component.html
@@ -9,17 +9,17 @@
 
           </ul>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" >
         <strong> example 02 (custome interval Observable)</strong>
         <hr>
-        <ul class="list " id="elcontainer1">
+        <ul class="list " id="elcontainer1" [ngClass]="status2 == 'completed' ? 'completed': status2 =='error'?'error':''">
 
         </ul>
   </div>
 
 </div>
 <div class="row"></div>
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-12">
         <strong> example 03 (Randome Name)</strong>
         <hr>
@@ -32,6 +32,6 @@
 
 
     </div>
-</div>
+</div> -->
 
 </div>
