--- a/angular/my-app/src/app/core/componet/header/header.component.html
+++ b/angular/my-app/src/app/core/componet/header/header.component.html
@@ -1,18 +1,18 @@
 <header>
   <!-- Navbar -->
-  <nav class=" p-2" style="height: 69px;">
-    <ul class=" nav d-flex  flex-nowrap">
+  <nav class="p-2" style="height: 69px">
+    <ul class="nav d-flex flex-nowrap">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="home" ><h5>HOME</h5></a>
+        <a class="nav-link active" routerLink="home"><h5>HOME</h5></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="about" ><h5>ABOUT US</h5></a>
+        <a class="nav-link active" routerLink="about"><h5>ABOUT US</h5></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"  routerLink=""><h5>CONTACT US</h5></a>
+        <a class="nav-link active" routerLink=""><h5>CONTACT US</h5></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"  routerLink="user"> <h5>USERS</h5></a>
+        <a class="nav-link active" routerLink="user"> <h5>USERS</h5></a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" routerLink="customer"><h5>CUSTOMERS</h5></a>
@@ -21,18 +21,27 @@
         <a class="nav-link active" routerLink="employee"><h5>EMPLOYEE</h5></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="dynamicomponet"><h5>DYNAMIC</h5></a>
+        <a class="nav-link active" routerLink="dynamicomponet"
+          ><h5>DYNAMIC</h5></a
+        >
       </li>
-      <li><div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown button
-        </button>
-        <ul class="dropdown-menu bg-dark">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div></li>
+      <li>
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Dropdown button
+          </button>
+          <ul class="dropdown-menu bg-dark">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </nav>
   <!-- Navbar -->
