--- a/angular/my-app/src/app/core/componet/navigation/navigation.component.html
+++ b/angular/my-app/src/app/core/componet/navigation/navigation.component.html
@@ -1,104 +1,119 @@
+<!-- Sidebar -->
+<nav id="sidebar" class="h-100">
+  <div class="sidebar-header ps-4">
+    <h3>ANGULAR</h3>
+  </div>
 
-  <!-- Sidebar -->
-  <nav id="sidebar" class="h-100 " >
-      <div class="sidebar-header ps-4">
-          <h3>ANGULAR</h3>
-      </div>
-
-
-      <ul class="list-unstyled components overflow-auto h-100">
-          <li class="active">
-             <a href="#DirectiveSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" >Directive Type</a>
-              <ul class="collapse list-unstyled" id="DirectiveSubmenu">
-                <li>
-                  <a href="#attributeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Attribute</a>
-                  <ul class="collapse list-unstyled" id="attributeSubmenu">
-                    <li><a routerLink="directive/ngstyle">Ngstyle</a></li>
-                    <li><a routerLink="directive/ngclass">NgClass</a></li>
-                    <li><a routerLink="directive/ngmodel">NgModel</a></li>
-                  </ul>
-                </li>
-                  <li>
-                    <a href="#structuralSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Structural</a>
-                    <ul class="collapse list-unstyled" id="structuralSubmenu">
-                      <li><a routerLink="directive/ngif">Ngif</a></li>
-                      <li><a routerLink="directive/ngfor">Ngfor</a></li>
-                      <li><a routerLink="directive/ngswitch">NgSwitch</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#CustomeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Custome</a>
-                    <ul class="collapse list-unstyled" id="CustomeSubmenu">
-                      <li><a routerLink="ngform">Custome1</a></li>
-                      <li><a routerLink="ngform">Custome2</a></li>
-                    </ul>
-                  </li>
-
-              </ul>
-          </li>
-          <li>
-              <a href="#PipeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pipe</a>
-              <ul class="collapse list-unstyled" id="PipeSubmenu">
-                  <li>
-                    <a href="#inbuilSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Inbuild Pipe</a>
-                    <ul class="collapse list-unstyled" id="inbuilSubmenu">
-                      <li><a routerLink="pipe/allpipe">all Pipe</a></li>
-                      <
-
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#customeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Custome Pipe</a>
-                    <ul class="collapse list-unstyled" id="customeSubmenu">
-                      <li><a routerLink="pipe/wordcunter">wordcunter</a></li>
-                      <li><a href=""> Custome Pipe 2</a></li>
-                    </ul>
-                  </li>
-
-              </ul>
-          </li>
-          <li>
-            <a href="#BindigSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Bindig</a>
-            <ul class="collapse list-unstyled" id="BindigSubmenu">
-                <li>
-                  <a href="">One Way Bindig</a>
-                </li>
-                <li>
-                  <a href="">Two Way Bindig</a>
-                </li>
-
-            </ul>
+  <ul class="list-unstyled components overflow-auto h-100">
+    <li class="active">
+      <a
+        href="#DirectiveSubmenu"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle"
+        >Directive Type</a
+      >
+      <ul class="collapse list-unstyled" id="DirectiveSubmenu">
+        <li>
+          <a
+            href="#attributeSubmenu"
+            data-toggle="collapse"
+            aria-expanded="false"
+            class="dropdown-toggle"
+            >Attribute</a
+          >
+          <ul class="collapse list-unstyled" id="attributeSubmenu">
+            <li><a routerLink="directive/ngstyle">Ngstyle</a></li>
+            <li><a routerLink="directive/ngclass">NgClass</a></li>
+            <li><a routerLink="directive/ngmodel">NgModel</a></li>
+          </ul>
         </li>
         <li>
-          <a href="#RxJSSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">RxJS</a>
-          <ul class="collapse list-unstyled" id="RxJSSubmenu">
-              <li>
-                <a routerLink="rxjs/observable">OBSERVABLE</a>
-              </li>
-              <li>
-                <a href="#subjectSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Subject Type</a>
-                <ul class="collapse list-unstyled" id="subjectSubmenu">
-                    <li>
-                      <a routerLink="rxjs/subject">Subject</a>
-                    </li>
-                    <li>
-                      <a routerLink="rxjs/behavioural">BehaviouralSubject</a>
-                    </li>
-                    <li>
-                      <a routerLink="rxjs/async">AsyncSubject</a>
-                    </li>
-                    <li>
-                      <a routerLink="rxjs/reply">ReplaySubject</a>
-                    </li>
-
-                </ul>
-              </li>
-
+          <a
+            href="#structuralSubmenu"
+            data-toggle="collapse"
+            aria-expanded="false"
+            class="dropdown-toggle"
+            >Structural</a
+          >
+          <ul class="collapse list-unstyled" id="structuralSubmenu">
+            <li><a routerLink="directive/ngif">Ngif</a></li>
+            <li><a routerLink="directive/ngfor">Ngfor</a></li>
+            <li><a routerLink="directive/ngswitch">NgSwitch</a></li>
           </ul>
-
-      </li>
-
+        </li>
+        <li>
+          <a
+            href="#CustomeSubmenu"
+            data-toggle="collapse"
+            aria-expanded="false"
+            class="dropdown-toggle"
+            >Custome</a
+          >
+          <ul class="collapse list-unstyled" id="CustomeSubmenu">
+            <li><a routerLink="ngform">Custome1</a></li>
+            <li><a routerLink="ngform">Custome2</a></li>
+          </ul>
+        </li>
       </ul>
-  </nav>
-
-
+    </li>
+    <li>
+      <a
+        href="#PipeSubmenu"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle"
+        >Pipe</a
+      >
+      <ul class="collapse list-unstyled" id="PipeSubmenu">
+        <li>
+          <a
+            href="#inbuilSubmenu"
+            data-toggle="collapse"
+            aria-expanded="false"
+            class="dropdown-toggle"
+            >Inbuild Pipe</a
+          >
+          <ul class="collapse list-unstyled" id="inbuilSubmenu">
+            <li><a routerLink="pipe/allpipe">all Pipe</a></li>
+            <
+          </ul>
+        </li>
+        <li>
+          <a
+            href="#customeSubmenu"
+            data-toggle="collapse"
+            aria-expanded="false"
+            class="dropdown-toggle"
+            >Custome Pipe</a
+          >
+          <ul class="collapse list-unstyled" id="customeSubmenu">
+            <li><a routerLink="pipe/wordcunter">wordcunter</a></li>
+            <li><a href=""> Custome Pipe 2</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a
+        href="#BindigSubmenu"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle"
+        >Bindig</a
+      >
+      <ul class="collapse list-unstyled" id="BindigSubmenu">
+        <li>
+          <a href="">One Way Bindig</a>
+        </li>
+        <li>
+          <a href="">Two Way Bindig</a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a routerLink="rxjs">RXJS</a>
+    </li>
+    
+  </ul>
+</nav>
