--- a/angular/my-app/src/app/rxjs/subject/subject.component.html
+++ b/angular/my-app/src/app/rxjs/subject/subject.component.html
@@ -1,4 +1,5 @@
 <div class="my-3 p-5">
+      <button type="button" class="btn btn-primary mb-2" routerLink="../">Back...</button>
   <h2>Subject</h2>
   <br>
   <div class="row">
