--- a/angular/my-app/src/app/rxjs/observable/observable.component.html
+++ b/angular/my-app/src/app/rxjs/observable/observable.component.html
@@ -29,9 +29,8 @@
         </p>
         <hr>
         <p>current name : <strong > {{name}}</strong></p>
-        <span class="badge bg-success badge-success" [ngClass]="namestatus == 'completed' ? ' badge-success': 
-        namestatus =='error'?' badge-danger':'badge-primary'">
-        {{"namestatus == 'completed' ? ' success': namestatus =='error'?' fail':'running'"}}</span>
+        <span class="badge bg-success badge-success" [ngClass]="namestatus == 'completed' ? ' badge-success':
+        namestatus =='error'?' badge-danger':'badge-primary'">suscess</span>
     </div>
 </div>
 
