--- a/angular/CRUD/crud-operation/src/app/core/header/header.component.html
+++ b/angular/CRUD/crud-operation/src/app/core/header/header.component.html
@@ -1,5 +1,9 @@
 
 
-<header>
-<h1 class="text-bg-danger">hello</h1>
+<header class="p-2 ">
+    <u class="d-flex ">
+        <li routerLink="home">Home</li>
+        <li routerLink="about">About</li>
+        <li  routerLink="employee">Employee</li>
+    </u>
 </header>
