--- a/angular/CRUD/crud-operation/src/app/employee/details-employee/details-employee.component.html
+++ b/angular/CRUD/crud-operation/src/app/employee/details-employee/details-employee.component.html
@@ -1,3 +1,7 @@
 <div class=" p-5">
-  <h1>hello</h1>
-</div>  
+  <h1>details</h1>
+ firstName: {{showDeails.firstname}}<br>
+lastName: {{showDeails.lastname}}<br>
+PhoneNo: {{showDeails.phoneno}}<br>
+Employee:{{showDeails.email}}
+</div>
