--- a/angular/CRUD/crud-operation/src/app/employee/employeeform/employeeform.component.html
+++ b/angular/CRUD/crud-operation/src/app/employee/employeeform/employeeform.component.html
@@ -39,7 +39,8 @@
       </div>
     </div>
   </div>
-  <button type=" submit" class="btn btn-primary ms-5 mt-2">Save</button>
+  <button type=" submit" class="btn btn-primary ms-5 mt-2 ">Save</button>
+  <button type=" submit" class="btn btn-primary ms-2 mt-2 " (click)="reset()">Reset</button>
 </form>
 
 <app-employeelist [employee]="employeelist"></app-employeelist>
