--- a/angular/CRUD/crud-operation/src/styles.scss
+++ b/angular/CRUD/crud-operation/src/styles.scss
@@ -1,16 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/bootstrap/scss/bootstrap';
-@import "../src/assets/scss/base/index";
+@import "assets/scss/base/index";
 @import "../src/assets/scss/vender/index";
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body,html{
-    height: 100%;
-    width: 100%;
-    // font-family: ;
-}
