--- a/angular/CRUD/crud-operation/src/app/core/header/header.component.html
+++ b/angular/CRUD/crud-operation/src/app/core/header/header.component.html
@@ -1,12 +1,19 @@
-
-
 <header class="p-2 ">
     <nav class="nav">
-        <u class="d-flex ">
-            <li routerLink="home">Home</li>
-            <li routerLink="about">About</li>
-            <li  routerLink="employee">Employee</li>
+        <u class="navbar mb-2  d-flex">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " routerLink="about">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="employee">Employee</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="users">Users</a>
+            </li>
+
         </u>
     </nav>
-    
 </header>
