--- a/angular/CRUD/crud-operation/src/styles.scss
+++ b/angular/CRUD/crud-operation/src/styles.scss
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "assets/scss/base/index";
 @import "../src/assets/scss/vender/index";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
