--- a/angular/CRUD/dialog-crud-operation/src/app/users/userlist/userlist.component.html
+++ b/angular/CRUD/dialog-crud-operation/src/app/users/userlist/userlist.component.html
@@ -23,7 +23,7 @@
         <td>
           <button type="button" class="btn btn-primary" (click)="editUser(user)">EDIT</button>
           <button type="button" class="btn btn-danger ms-3" (click)=" onDelete(user.id)">DELETE</button>
-          <button type="button" class="btn btn-success ms-3">DETAILS</button>
+          <!-- <button type="button" class="btn btn-success ms-3">DETAILS</button> -->
         </td>
       </tr>
     </tbody>
