--- a/angular/CRUD/dialog-crud-operation/src/app/users/delete-dialog/delete-dialog.component.html
+++ b/angular/CRUD/dialog-crud-operation/src/app/users/delete-dialog/delete-dialog.component.html
@@ -1,5 +1,13 @@
-<h1> Delete user</h1>
-<div mat-dialog-actions>
-  <button mat-raised-button color="primary">YES</button>
-  <button mat-raised-button color="warn">NO</button>
+<div class="header">
+  <button md-dialog-close md-icon-button>
+    <mat-icon>close</mat-icon>
+  </button>
+  <!-- <h1 md-dialog-title>{{ data.title }}</h1> -->
 </div>
+<mat-dialog-content>
+  <!-- <p [innerHTML]="data.text"></p> -->
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button md-button>Cancel</button>
+  <button md-button color="primary">Delete</button>
+</mat-dialog-actions>
