--- a/angular/CRUD/simple crud-operation/src/app/employee/employeelist/employeelist.component.html
+++ b/angular/CRUD/simple crud-operation/src/app/employee/employeelist/employeelist.component.html
@@ -1,4 +1,5 @@
 <h2 class="ms-5 mt-2"> EMPLOYEE LIST</h2>
+<input type="text" [(ngModel)]="search" placeholder="Serach any fields" />
 <div class="p-5">
   <table class="table">
     <thead>
@@ -12,14 +13,11 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let list of employee">
-        <!-- <button type="submit" (click)="editeEmploye(list)"> -->
+      <tr *ngFor="let list of employee | search:search">
         <td>{{list.id}}</td>
-        <td><a (click)="editeEmploye(list)" class="cursor-pointer">{{list.firstname}}</a></td>
-        <td><a (click)="editeEmploye(list)">{{list.lastname}}</a></td>
-        <td>{{list.phoneno}}</td>
+        <td>{{list.firstname}}</td>
+        <td>{{list.lastname}}</td>
         <td>{{list.email}}</td>
-        <!-- </button> -->
         <td>
           <button type="button" class="btn btn-danger me-2" (click)="onDelete(list.id)">Delete</button>
           <button type="button" class="btn btn-primary me-2" (click)=" employedetails(list)">Details</button>
